implemented the utilisation of data tables

--- a/reminders/templates/reminders/layout.html
+++ b/reminders/templates/reminders/layout.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="{% static 'resources/css/foundation.css' %}" rel="stylesheet"/>
     <link href="{% static 'resources/css/foundation-datepicker.css' %}" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/t/zf/dt-1.10.11,af-2.1.1,fc-3.2.1,fh-3.1.1,kt-2.1.1,r-2.0.2/datatables.min.css">
     <script src="{% static 'resources/js/vendor/modernizr.js' %}"></script>
 </head>
 <body>
@@ -56,6 +57,7 @@
     {% load staticfiles %}
     <script src="{% static 'resources/js/vendor/jquery.js' %}"></script>
     <script src="{% static 'resources/js/foundation.min.js' %}"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/t/zf/dt-1.10.11,af-2.1.1,fc-3.2.1,fh-3.1.1,kt-2.1.1,r-2.0.2/datatables.min.js"></script>
     <script src="{% static 'resources/js/foundation-datepicker.js' %}"></script>
     <script src="{% static 'resources/js/reminders/reminders.js' %}"></script>
 
